Stu I think it's fixed now
I think I fixed the scrolling and sections not visible problem.

--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -9,7 +9,7 @@
 */
 
 
-/* http://meyerweb.com/eric/tools/css/reset/ 
+/* http://meyerweb.com/eric/tools/css/reset/
    v2.0 | 20110126
    License: none (public domain)
 */
@@ -23,8 +23,8 @@ b, u, i, center,
 dl, dt, dd, ol, ul, li,
 fieldset, form, label, legend,
 table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
 menu, nav, output, ruby, section, summary,
 time, mark, audio, video {
     margin: 0;
@@ -35,7 +35,7 @@ time, mark, audio, video {
     vertical-align: baseline;
 }
 /* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, 
+article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
     display: block;
 }
@@ -106,6 +106,10 @@ body, html {
     background-position: center;
 }
 
+section {
+  height: 100vh;
+}
+
 #section1 {
     background:
         linear-gradient(rgba(0,0,255,0.45),rgba(0,0,255,0.45)),
@@ -142,7 +146,7 @@ body, html {
     =================================================
 */
 
-/*  Stu: there must be some way to avoid repeating the transparent gradient overlay text, 
+/*  Stu: there must be some way to avoid repeating the transparent gradient overlay text,
     with different background images  */
 
 #section5a {
@@ -181,7 +185,7 @@ body, html {
 }
 
 #section5a img,
-#section5b img, 
+#section5b img,
 #section5c img,
 #section5d img,
 #section5e img {
@@ -236,4 +240,3 @@ body, html {
     display: block;
     margin: auto;
 }
-
